clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__strtold.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/strtold.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[9] = ConstArray { ty: Array { element_type: Named("s8i"), size: 9 }, elts: Str("2.75tail"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("%.2Lf %c\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn strtold(%arg0: s8i*, %arg1: s8i**) -> long_double<f80> [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i*, "end", align 8
        %2 = alloca long_double<f80>, "d", align 16
        %3 = const 0 : s32i
        store %3, %0
        %4 = const #cir.ptr<null> : s8i*
        store %4, %1, align 8
        %5 = get_global @strtold : (s8i*, s8i**) -> long_double<f80>*
        %6 = get_global @.str : s8i[9]*
        %7 = cast(array_to_ptrdecay) %6 : s8i*
        %8 = call @strtold(%7, %1) : long_double<f80> [all]
        store %8, %2, align 16
        %9 = get_global @printf : (s8i*, ...) -> s32i*
        %10 = get_global @.str.1 : s8i[10]*
        %11 = cast(array_to_ptrdecay) %10 : s8i*
        %12 = load %2 : long_double<f80>, align 16
        %13 = load %1 : s8i*, align 8
        %14 = load %13 : s8i, align 1
        %15 = cast(integral) %14 : s32i
        %16 = call @printf(%11, %12, %15) : s32i [all]
        %17 = const 0 : s32i
        store %17, %0
        %18 = load %0 : s32i
        return %18
}
