clang-ir/tests/snapshots/snapshot_fixtures__stdlib__stdlib__strtoull.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/strtoull.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("ffxyz"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[9] = ConstArray { ty: Array { element_type: Named("s8i"), size: 9 }, elts: Str("%llu %c\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn strtoull(%arg0: s8i*, %arg1: s8i**, %arg2: s32i) -> u64i [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i*, "end", align 8
        %2 = alloca u64i, "v", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const #cir.ptr<null> : s8i*
        store %4, %1, align 8
        %5 = get_global @strtoull : (s8i*, s8i**, s32i) -> u64i*
        %6 = get_global @.str : s8i[6]*
        %7 = cast(array_to_ptrdecay) %6 : s8i*
        %8 = const 16 : s32i
        %9 = call @strtoull(%7, %1, %8) : u64i [all]
        store %9, %2, align 8
        %10 = get_global @printf : (s8i*, ...) -> s32i*
        %11 = get_global @.str.1 : s8i[9]*
        %12 = cast(array_to_ptrdecay) %11 : s8i*
        %13 = load %2 : u64i, align 8
        %14 = load %1 : s8i*, align 8
        %15 = load %14 : s8i, align 1
        %16 = cast(integral) %15 : s32i
        %17 = call @printf(%12, %13, %16) : s32i [all]
        %18 = const 0 : s32i
        store %18, %0
        %19 = load %0 : s32i
        return %19
}
